<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="24dp"
    tools:context=".ui.homepage.home.HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Selamat Datang Di Aplikasi\nASMARA DESA,"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:backgroundTint="@color/primary"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="John Doe"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/nik_s"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/alamat_s"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                 />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
<GridLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/cardView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:padding="10dp"
    android:rowCount="2"
    android:columnCount="2"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_aspirasi"
        android:layout_width="103dp"
        android:layout_height="87dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="20dp"
        android:focusable="true"
        android:clickable="true"
       >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/ic_aspirasi"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon_ilustration"
                android:scaleType="fitXY"
                android:src="@drawable/twotone_handshake_24"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aspirasi"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_aspirasi" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_identitas"
        android:layout_width="103dp"
        android:layout_height="87dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="20dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/ic_identitas"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon_ilustration"
                android:scaleType="fitXY"
                android:src="@drawable/ic_card_24"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Identitas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_identitas" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/btn_info"
        android:layout_width="103dp"
        android:layout_height="87dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="20dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/ic_info"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon_ilustration"
                android:scaleType="fitXY"
                android:src="@drawable/twotone_info_24"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Info"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/btn_logout"
        android:layout_width="103dp"
        android:layout_height="87dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="20dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/ic_logout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/icon_ilustration"
                android:scaleType="fitXY"
                android:src="@drawable/ic_logout_24"
                android:layout_marginBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>